--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
   <h1>Hello world!</h1>
+
+<div class = "fb-like" data-share = "true" data-width = "450" data-show -face = "true" > </ div>
   
 </body>
 </html>
