--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
- 
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 
-<div class = "fb-like" data-share = "true" data-width = "450" data-show -face = "true" > </ div>
+
   
 </body>
 </html>
