--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   data-width="450"
   data-show-faces="true">
 </div>
-
+<div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-auto-logout-link="false" data-use-continue-as="false"></div>
 
   
 </body>
